# remotejsi

./: .gitignore  package-lock.json  package.json  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/example/remotejsi/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/aidl/com/example/remotejsi/: IHostFunctionInterface.aidl  IHostObjectInterface.aidl  IJSIAidlInterface.aidl  IJSIBufferInterface.aidl  IJSIInterface.aidl  IJSIObjectInterface.aidl  IJSIObjectStaticsInterface.aidl  IJSIStringInterface.aidl  IJSIStringStaticsInterface.aidl  IJSISymbolInterface.aidl  IJSIValueInterface.aidl  IManagerInterface.aidl  IRemoteJSIInterface.aidl  IValueCollectionInterface.aidl
app/src/main/cpp/: CMakeLists.txt  HostFunctionService.cpp  HostFunctionService.h  HostObjectService.cpp  HostObjectService.h  JSIBufferService.cpp  JSIBufferService.h  JSIObjectService.cpp  JSIObjectService.h  JSIObjectStaticsService.cpp  JSIObjectStaticsService.h  JSIProxyRuntime.cpp  JSIProxyRuntime.h  JSIService.cpp  JSIService.h  JSIStringService.cpp  JSIStringService.h  JSIStringStaticsService.cpp  JSIStringStaticsService.h  JSISymbolService.cpp  JSISymbolService.h  JSIValueCollectionService.cpp  JSIValueCollectionService.h  JSIValueService.cpp  JSIValueService.h  ManagerService.cpp  ManagerService.h  RemoteJSIService.cpp  RemoteJSIService.h  jsiimpl.cpp  jsiproxy.cpp  logging.h  native-lib.cpp
app/src/main/cpp/aidl/com/example/remotejsi/: IHostFunctionInterface.cpp  IHostObjectInterface.cpp  IJSIAidlInterface.cpp  IJSIBufferInterface.cpp  IJSIInterface.cpp  IJSIObjectInterface.cpp  IJSIObjectStaticsInterface.cpp  IJSIStringInterface.cpp  IJSIStringStaticsInterface.cpp  IJSISymbolInterface.cpp  IJSIValueInterface.cpp  IManagerInterface.cpp  IRemoteJSIInterface.cpp  IValueCollectionInterface.cpp
app/src/main/cpp/includes/aidl/com/example/remotejsi/: BnHostFunctionInterface.h  BnHostObjectInterface.h  BnJSIAidlInterface.h  BnJSIBufferInterface.h  BnJSIInterface.h  BnJSIObjectInterface.h  BnJSIObjectStaticsInterface.h  BnJSIStringInterface.h  BnJSIStringStaticsInterface.h  BnJSISymbolInterface.h  BnJSIValueInterface.h  BnManagerInterface.h  BnRemoteJSIInterface.h  BnValueCollectionInterface.h  BpHostFunctionInterface.h  BpHostObjectInterface.h  BpJSIAidlInterface.h  BpJSIBufferInterface.h  BpJSIInterface.h  BpJSIObjectInterface.h  BpJSIObjectStaticsInterface.h  BpJSIStringInterface.h  BpJSIStringStaticsInterface.h  BpJSISymbolInterface.h  BpJSIValueInterface.h  BpManagerInterface.h  BpRemoteJSIInterface.h  BpValueCollectionInterface.h  IHostFunctionInterface.h  IHostObjectInterface.h  IJSIAidlInterface.h  IJSIBufferInterface.h  IJSIInterface.h  IJSIObjectInterface.h  IJSIObjectStaticsInterface.h  IJSIStringInterface.h  IJSIStringStaticsInterface.h  IJSISymbolInterface.h  IJSIValueInterface.h  IManagerInterface.h  (+2 more)
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
gradle/wrapper/: gradle-wrapper.properties
(+5 files in other folders)
